feature: All endpoints returning ApiResponse and added drawable layer