@@ -1,22 +1,13 @@
 package com.backend.saya.services;
 
-import com.backend.saya.dto.ApiResponse;
-import com.backend.saya.dto.ObjectivesRequest;
-import com.backend.saya.dto.UserResponse;
+import com.backend.saya.dto.*;
 import com.backend.saya.entities.*;
-import com.backend.saya.entities.enumeration.Archetype;
-import com.backend.saya.entities.enumeration.Segmentation;
 import com.backend.saya.repositories.HabitRepository;
-import com.backend.saya.util.MathUtils;
-import io.micrometer.common.util.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Example;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.HttpStatusCode;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
-import com.backend.saya.exceptions.ConflictException;
 import com.backend.saya.exceptions.NotFoundException;
 import com.backend.saya.repositories.ObjectivesRepository;
 import com.backend.saya.repositories.TokenAccessRepository;
@@ -24,6 +15,7 @@ import com.backend.saya.repositories.UserRepository;
 import org.springframework.web.bind.annotation.RequestHeader;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class LoginService {
@@ -40,54 +32,111 @@ public class LoginService {
 	@Autowired
 	private HabitRepository habitRepository;
 	
-	public ResponseEntity<ApiResponse> login(String identifier, String password) {
-		if (StringUtils.isBlank(identifier) || StringUtils.isBlank(password)) {
-			return ResponseEntity.badRequest().body(ApiResponse.error("Bad Request", "Username and Password are requested!"));
+	public ApiResponse login(UserRequest userRequest) {
+		if ((userRequest.getUsername().isBlank() && userRequest.getEmail().isBlank()) || userRequest.getPassword().isBlank()) {
+			return ApiResponse.error(HttpStatus.BAD_REQUEST.name(), "Username and Password are requested!");
 		}
-
+		String identifier = (userRequest.getUsername().isBlank())? userRequest.getEmail() : userRequest.getUsername();
 		Optional<User> userOpt = userRepository.findByUsernameOrEmail(identifier);
 		if (userOpt.isEmpty()) {
-			return ResponseEntity.notFound().build();
+			return ApiResponse.error(HttpStatus.NOT_FOUND.name(), "");
 		}
 
 		User user = userOpt.get();
 
-		if (!loginSecurity.matches(password, user.getPassword())) {
-			return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(ApiResponse.error("Unauthorized", "Invalid credentials"));
+		if (!loginSecurity.matches(userRequest.getPassword(), user.getPassword())) {
+			return ApiResponse.error(HttpStatus.UNAUTHORIZED.name(), "Invalid credentials");
 		}
 
 		TokenAccess token = loginSecurity.getTokenAccess(user.getId());
-		boolean objectivesDefined = user.getObjectives() != null;
-		return ResponseEntity.ok(ApiResponse.success(new UserResponse(token.getUserId(), identifier, objectivesDefined, token.getToken())));
+		return ApiResponse.success(new UserResponse(token.getUserId(), identifier, token.getToken()));
 	}
 	
-	public ResponseEntity<ApiResponse> register(String email, String username, String password) {
-		if (StringUtils.isBlank(email) || StringUtils.isBlank(username) || StringUtils.isBlank(password)) {
-			return ResponseEntity.badRequest()
-					.body(ApiResponse.error("Bad Request", "All fields are required"));
+	public ApiResponse register(UserRequest userRequest) {
+		if (userRequest.getEmail().isBlank() || userRequest.getUsername().isBlank() || userRequest.getPassword().isBlank()) {
+			return ApiResponse.error(HttpStatus.BAD_REQUEST.name(), "All fields are required");
 		}
-		if (!email.matches("^[\\w.-]+@[\\w.-]+\\.[a-z]{2,}$")) {
-			return ResponseEntity.badRequest()
-					.body(ApiResponse.error("Bad Request", "Invalid email format"));
+		if (!userRequest.getEmail().matches("^[\\w.-]+@[\\w.-]+\\.[a-z]{2,}$")) {
+			return ApiResponse.error(HttpStatus.BAD_REQUEST.name(), "Invalid email format");
 		}
-		if (userRepository.emailAlreadyExists(email)) {
-			return ResponseEntity.status(HttpStatus.CONFLICT)
-					.body(ApiResponse.error("Conflict", "Email already registered"));
+		if (userRepository.emailAlreadyExists(userRequest.getEmail())) {
+			return ApiResponse.error(HttpStatus.CONFLICT.name(), "Email already registered");
 		}
-		if (userRepository.usernameAlreadyExists(username)) {
-			return ResponseEntity.status(HttpStatus.CONFLICT)
-					.body(ApiResponse.error("Conflict", "Username already registered"));
+		if (userRepository.usernameAlreadyExists(userRequest.getUsername())) {
+			return ApiResponse.error(HttpStatus.CONFLICT.name(), "Username already registered");
 		}
-		var user = new User(null, username, loginSecurity.encode(password), null);
-		user.setEmail(email);
+		var user = new User(null, userRequest.getUsername(), loginSecurity.encode(userRequest.getPassword()), null);
+		user.setEmail(userRequest.getEmail());
 		user = userRepository.saveAndFlush(user);
 		if (user.getId() != null) {
 			TokenAccess token = loginSecurity.getTokenAccess(user.getId());
-			return ResponseEntity.ok(ApiResponse.success(new UserResponse(token.getUserId(), username, false, token.getToken())));
+			return ApiResponse.success(new UserResponse(token.getUserId(), userRequest.getUsername(), token.getToken()));
 		} else {
-			return ResponseEntity.internalServerError()
-					.body(ApiResponse.error("Internal Server Error", "An error occurred while processing your registration. Please try again later."));
+			return ApiResponse.error(HttpStatus.INTERNAL_SERVER_ERROR.name(), "An error occurred while processing your registration. Please try again later.");
 		}
+	}
+
+	public ApiResponse registerObjectives(String token, ObjectivesRequest objectivesResponse) {
+		TokenAccess tokenAccess = tokenAccessRepository.findByToken(token);
+		User user = userRepository.getReferenceById(tokenAccess.getUserId());
+		Objectives objectives = new Objectives(objectivesResponse.getDailySpendedHours(), objectivesResponse.getMetaReduction());
+		objectives.addAllHabitsHad(habitRepository.findAllById(objectivesResponse.getHabitsHad()));
+		objectives.addAllDesiredHabits(habitRepository.findAllById(objectivesResponse.getDesiredHabits()));
+		if (user.getObjectives() != null) {
+			return ApiResponse.error(HttpStatus.CONFLICT.name(), "This user already has objectives defined");
+		}
+		for (Habit h : objectives.getHabitsHad()) {
+			Habit h1 = habitRepository.findByName(h.getName()).orElse(new Habit());
+			objectives.removeHabitHad(h);
+			objectives.addHabitHad(h1);
+		}
+		for (Habit h : objectives.getDesiredHabits()) {
+			Habit h1 = habitRepository.findByName(h.getName()).orElse(new Habit());
+			objectives.removeDesiredHabit(h);
+			objectives.addDesiredHabit(h1);
+		}
+
+		objectivesRepository.saveAndFlush(objectives);
+		user.setObjectives(objectives);
+		archetypeService.defineArchetype(user);
+		user = userRepository.saveAndFlush(user);
+		return ApiResponse.success(new UserResponse(user.getId(), user.getUsername(), tokenAccess.getToken()));
+	}
+
+	public ApiResponse addHabits(String token, HabitsRequest habitsRequest) {
+		TokenAccess tokenAccess = tokenAccessRepository.findByToken(token);
+		User user = userRepository.getReferenceById(tokenAccess.getUserId());
+		if (user.getObjectives() == null) {
+			return ApiResponse.error(HttpStatus.METHOD_NOT_ALLOWED.name(), "User doesn't have objectives defined");
+		}
+		if (habitsRequest.getHabitsHadIds() != null) {
+			user.getObjectives().addAllHabitsHad(habitRepository.findAllById(habitsRequest.getHabitsHadIds()));
+		}
+		if (habitsRequest.getDesiredHabitsIds() != null) {
+			user.getObjectives().addAllDesiredHabits(habitRepository.findAllById(habitsRequest.getDesiredHabitsIds()));
+		}
+
+		objectivesRepository.saveAndFlush(user.getObjectives());
+		archetypeService.defineArchetype(user);
+		return ApiResponse.success(new UserResponse(user.getId(), user.getUsername(), tokenAccess.getToken()));
+	}
+
+	public ApiResponse removeHabits(String token, HabitsRequest habitsRequest) {
+		TokenAccess tokenAccess = tokenAccessRepository.findByToken(token);
+		User user = userRepository.getReferenceById(tokenAccess.getUserId());
+		if (user.getObjectives() == null) {
+			return ApiResponse.error(HttpStatus.METHOD_NOT_ALLOWED.name(), "User doesn't have objectives defined");
+		}
+		if (habitsRequest.getHabitsHadIds() != null) {
+			user.getObjectives().getHabitsHad().removeIf(habit -> habitsRequest.getHabitsHadIds().contains(habit.getId()));
+		}
+		if (habitsRequest.getDesiredHabitsIds() != null) {
+			user.getObjectives().getDesiredHabits().removeIf(habit -> habitsRequest.getDesiredHabitsIds().contains(habit.getId()));
+		}
+		objectivesRepository.saveAndFlush(user.getObjectives());
+		archetypeService.defineArchetype(user);
+		user = userRepository.saveAndFlush(user);
+		return ApiResponse.success(new UserResponse(user.getId(), user.getUsername(), tokenAccess.getToken()));
 	}
 
 	public boolean changePassword(@RequestHeader String username, String password) {
@@ -95,67 +144,5 @@ public class LoginService {
 		if (user == null) throw new NotFoundException("User not found");
 		user.setPassword(password);
 		return Objects.equals(userRepository.save(user).getPassword(), password);
-	}
-
-	public ResponseEntity<ApiResponse> registerObjectives(String token, ObjectivesRequest objectivesRequest) {
-		TokenAccess tokenAccess = tokenAccessRepository.findByToken(token);
-		User user = userRepository.getReferenceById(tokenAccess.getUserId());
-		if (user.getObjectives() != null) {
-			return ResponseEntity.status(HttpStatus.CONFLICT).body(ApiResponse.error("Conflict", "This user already has objectives defined"));
-		}
-		Objectives objectives = new Objectives(objectivesRequest.getDailySpendedHours(), objectivesRequest.getMetaReduction());
-		objectives.addAllDesiredHabits(habitRepository.findAllById(Arrays.asList(objectivesRequest.getDesiredHabits())));
-		objectives.addAllHabitsHad(habitRepository.findAllById(Arrays.asList(objectivesRequest.getHabitsHad())));
-
-		objectivesRepository.saveAndFlush(objectives);
-		user.setObjectives(objectives);
-		archetypeService.defineArchetype(user);
-		user = userRepository.saveAndFlush(user);
-		UserResponse userResponse = new UserResponse(user.getId(), user.getUsername(), true, token);
-		return ResponseEntity.ok(ApiResponse.success(userResponse));
-	}
-
-
-	public User addHabits(String token, Habits habits) {
-		TokenAccess tokenAccess = tokenAccessRepository.findByToken(token);
-		User user = userRepository.getReferenceById(tokenAccess.getUserId());
-		if (user.getObjectives() == null) {
-			throw new RuntimeException("User doesn't have objectives");
-		}
-		if (habits.getHabitsHad() != null) {
-			user.getObjectives().addAllHabitsHad(findHabitsDB(habits.getHabitsHad()));
-		}
-		if (habits.getDesiredHabits() != null) {
-			user.getObjectives().addAllDesiredHabits(findHabitsDB(habits.getDesiredHabits()));
-		}
-
-		objectivesRepository.saveAndFlush(user.getObjectives());
-		archetypeService.defineArchetype(user);
-		return userRepository.saveAndFlush(user);
-	}
-
-	private List<Habit> findHabitsDB(Habit[] habits) {
-		List<Habit> habitsDB = new ArrayList<>();
-		for (Habit h : habits) {
-			habitsDB.add(habitRepository.findByName(h.getName()).get());
-		}
-		return habitsDB;
-	}
-
-	public User removeHabits(String token, Habits habits) {
-		TokenAccess tokenAccess = tokenAccessRepository.findByToken(token);
-		User user = userRepository.getReferenceById(tokenAccess.getUserId());
-		if (user.getObjectives() == null) {
-			throw new RuntimeException("User doesn't have objectives");
-		}
-		if (habits.getHabitsHad() != null) {
-			user.getObjectives().getHabitsHad().removeAll(findHabitsDB(habits.getHabitsHad()));
-		}
-		if (habits.getDesiredHabits() != null) {
-			user.getObjectives().getDesiredHabits().removeAll(findHabitsDB(habits.getDesiredHabits()));
-		}
-		objectivesRepository.saveAndFlush(user.getObjectives());
-		archetypeService.defineArchetype(user);
-		return userRepository.saveAndFlush(user);
 	}
 }
